<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_iris_driver</name>
  <version>0.0.1</version>
  <description>Topic-based receiver for of Luminar Iris Lidar</description>
  <maintainer email="asaba96@pitt.edu">IAC</maintainer>
  <author>Andrew Saba</author>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>yaml-cpp</depend>
  <depend>luminar_iris_msgs</depend>
  <depend>backward_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
